# test_NDI

./: .gitignore  CMakeLists.txt  config.h.in  test_NDI.cpp
Lib.Base/: AudioSampleHeader.h  BMRaudioFrame.h  CMakeLists.txt  CapturePoolMgr.cpp  CapturePoolMgr.h  ClockTimer.h  CommonHelper.cpp  CommonHelper.h  ControlerTimeCode.h  FrameList.h  FrameListEx.h  GPUFrame.h  IBaseFrame.h  IMasterClock.h  LoopBuffer.cpp  LoopBuffer.h  ObjectPoolEx.h  SRWLocker.cpp  SRWLocker.h  SemaphoreClock.cpp  SemaphoreClock.h  StringHelper.h  SyncList.h  SyncQueue.h  Synchronized.h  VEncodedFrame.h  VideoFormatDef.h  async_thread.h  audioFrame.cpp  audioFrame.h  compVideoFrame.cpp  compVideoFrame.h  easyThread.h  eventClock.cpp  eventClock.h  locker.h  platform.cpp  platform.h  timecode.cpp  timecode.h  (+2 more)
Lib.Config/: AudioSampleHeader.h  CMakeLists.txt  CardDefine.h  Configurator.cpp  Configurator.h  IConfig.cpp  IConfig.h  cnlInfo.h
Lib.FrameConsumerNDI/: AudioProcess.cpp  AudioProcess.h  CMakeLists.txt  FrameConsumerNDI.cpp  FrameConsumerNDI.h  IFrameConsumerChannel.h
Lib.FrameProviderYuvFile/: CMakeLists.txt  FrameProviderYuvFile.cpp  FrameProviderYuvFile.h  IFPInputCallBack.h  IFrameProviderChannel.h  MarkerBuilder.h  WaveHeader.h  WaveReader.cpp  WaveReader.h
lib/: libndi.so.4.5.2
test_NDI/: test_NDI.h
