# CMakeList.txt : CMake project for test_NDI, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("test_NDI")

# Add source to this project's executable.
add_executable (test_NDI "test_NDI.cpp" "test_NDI.h")

# TODO: Add tests and install targets if needed.
